--- a/ExtentReports/30_08_2022_07_00_32_ExtentReports.html
+++ b/ExtentReports/30_08_2022_07_00_32_ExtentReports.html
@@ -89,7 +89,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i></a>
 <ul id="author-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">Tester</a>
+<a class="dropdown-item" href="#">Robin</a>
 </ul>
 </li>
 <li class="dropdown">
@@ -108,7 +108,7 @@
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
         <li class="test-item"  status="pass" test-id="1"
-          author="Tester"
+          author="Robin"
           tag="REGRESSION"
           device="CHROME">
           <div class="test-detail">
@@ -130,7 +130,7 @@
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-15"><span class="badge badge-pill badge-default">Tester</span>
+<div class="m-t-15"><span class="badge badge-pill badge-default">Robin</span>
 <span class="badge badge-pill badge-default">REGRESSION</span>
 <span class="badge badge-pill badge-default">CHROME</span></div>
 </div>
@@ -326,12 +326,12 @@
 <span class="meta">
 <span class='badge log pass-bg'>1</span>
 </span>
-<p class="name">Tester</p>
+<p class="name">Robin</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>Tester</h4>
+<h4>Robin</h4>
 <span status="pass" class='badge log pass-bg'>1 passed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -454,7 +454,7 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead>
 <tbody>
 <tr>
-<td>Tester</td>
+<td>Robin</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
